src/objects/ProductConfigMaster__c.object
<CustomObject>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product_Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category_2__c</fullName>
        <label>Product Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ProductConfigMaster</relationshipLabel>
        <relationshipName>ProductConfigMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Configuration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Product Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>ProductConfigMaster</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ProductConfigMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductConfigMaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>